@@ -4,7 +4,8 @@ Changelog
 2.6 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Changed content types vocabulary in order
+  to list only archetypes content types [valentinaB]
 
 
 2.5 (2013-01-28)
